fix: harden Patrol conflict harness evidence